--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <button onclick="addC()">Add Col</button>
     <button onclick="removeR()">Remove Row</button>
     <button onclick="removeC()">Remove Col</button>
-    <button onclick="remove()">Fill Single</button>
+    <button onclick="fillSingle()">Fill Single</button>
     <button onclick="fillU()">Fill All Uncolored</button>
     <button onclick="fillAll()">Fill All</button>
     <button onclick="clearAll()">Clear</button>
